# witch

./: .devcontainer.json  .ghcid  .gitignore  .hlint.yaml  LICENSE.txt  README.markdown  README.md  brittany.yaml  cabal.project  compose.yaml  from.cabal  hie.yaml  stack.yaml  witch.cabal
.devcontainer/: Dockerfile  cabal-shim.sh  compose.yaml  devcontainer.json  on-create.sh
.github/workflows/: ci.yaml  ci.yml  hlint.yaml  workflow.yaml
.vim/: coc-settings.json
docs/superpowers/plans/: 2026-05-23-osstring-conversions.md
docs/superpowers/specs/: 2026-05-23-osstring-conversions-design.md
i386/: Dockerfile
nix/: overlay.nix  pkg.nix  shell.nix  shell.sh
source/ghc-8.10/Witch/: Lift.hs
source/ghc-8.8/Witch/: Lift.hs
source/ghc-9.0/Witch/: Lift.hs
source/hedgehog/: Main.hs
source/test-suite/: Main.hs
src/ghc-8.10/Witch/: Lift.hs
src/ghc-8.8/Witch/: Lift.hs
src/ghc-9.0/Witch/: Lift.hs
src/lib/: From.hs  Witch.hs
src/lib/Witch/: Cast.hs  Casting.hs  From.hs  Identity.hs  Instances.hs  TryCast.hs  TryCastException.hs  TryFrom.hs  TryFromException.hs  Utility.hs
src/test/: Main.hs  WitchCompositionSpec.hs
