cabal-version: 2.2

name: witch
version: 1.2.0.3
synopsis: Convert values from one type into another.
description: Witch converts values from one type into another.

build-type: Simple
category: Data
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/witch
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.16.0 && < 4.20
    , bytestring >= 0.11.3 && < 0.12
    , containers >= 0.6.5 && < 0.7
    , tagged >= 0.8.6 && < 0.9
    , text >= 1.2.5 && < 1.3 || >= 2.0 && < 2.2
    , time >= 1.11.1 && < 1.13
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-redundant-constraints
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options:
      -Werror

  if impl(ghc >= 9.8)
    ghc-options: -Wno-missing-role-annotations

common executable
  import: library

  build-depends: witch
  ghc-options:
    -rtsopts
    -threaded

library
  import: library

  build-depends:
    , template-haskell >= 2.18 && < 2.22
  exposed-modules:
    Witch
    Witch.Encoding
    Witch.From
    Witch.Instances
    Witch.Lift
    Witch.TryFrom
    Witch.TryFromException
    Witch.Utility
  hs-source-dirs: source/library

test-suite witch-test-suite
  import: executable

  build-depends:
    , HUnit >= 1.6.1 && < 1.7
    , transformers >= 0.5.6 && < 0.7
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
