cabal-version: 2.2
name: witch
version: 1.3.0.1
synopsis: Convert values from one type into another.
description: Witch converts values from one type into another.
build-type: Simple
category: Data
extra-doc-files:
  CHANGELOG.md
  README.md

license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/witch
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>=4.19.0.0 || ^>=4.20.0.0 || ^>=4.21.0.0
  build-depends:
    bytestring ^>=0.11.4.0 || ^>=0.12.0.2,
    containers ^>=0.6.7 || ^>=0.7,
    tagged ^>=0.8.8,
    text ^>=2.0.2 || ^>=2.1,
    time ^>=1.12.2 || ^>=1.14,

  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-redundant-constraints
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options:
      -Werror

common executable
  import: library
  build-depends: witch
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  build-depends:
    template-haskell ^>=2.21.0.0 || ^>=2.22.0.0 || ^>=2.23.0.0

  -- cabal-gild: discover source/library
  exposed-modules:
    Witch
    Witch.Encoding
    Witch.From
    Witch.Generic
    Witch.Instances
    Witch.Lift
    Witch.TryFrom
    Witch.TryFromException
    Witch.Utility

  hs-source-dirs: source/library

test-suite witch-test-suite
  import: executable
  build-depends:
    HUnit ^>=1.6.2.0,
    transformers ^>=0.6.1.0,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0

test-suite witch-hedgehog
  import: executable
  build-depends:
    hedgehog ^>=1.5,
    transformers ^>=0.6.1.2,

  ghc-options: -Wno-unused-packages
  hs-source-dirs: source/hedgehog
  main-is: Main.hs
  type: exitcode-stdio-1.0
